background color, navigation and logo set

--- a/less/variablesDYL.less
+++ b/less/variablesDYL.less
@@ -1,3 +1,8 @@
 @primary-background-color: #e37b7c;
 @big-letter-font: Arial, Helvetica, sans-serif;
 @small-letter-font: inherit;
+@primary-color: #fff;
+@silver: #C0C0C0;
+
+// Escape variable
+@mobile: ~"(max-width: 500px)";
