--- a/less/indexDYL.less
+++ b/less/indexDYL.less
@@ -1,6 +1,13 @@
+@import './variablesDYL';
+@import './mixinsDYL';
+@import './TopBarDYL';
+@import './TopInfoDYL';
 
 * {
     box-sizing: border-box;
+}
+html {
+    font-size: 62.5%;
 }
 
 html, body {
@@ -9,7 +16,41 @@ html, body {
 }
 
 body {
-    .flex(none, center, column);
+    
+    .flex(space-between, center, column);
     background-color: @primary-background-color;
+    color: @primary-color;
     font-family: @big-letter-font;
 }
+
+h1 {
+    font-size: 4rem;
+  }
+  
+  h2 {
+    font-size: 3.2rem;
+    padding-bottom: 10px;
+  }
+  
+  h4 {
+    font-size: 2.5rem;    
+  }
+  h5 {
+    font-size: 2rem;
+    line-height: 2;
+  }
+  
+  p {
+    line-height: 1.5;
+    font-size: 1.6rem;
+    padding-bottom: 10px;
+  }
+
+  .start-button {
+      button {
+        .button-creator(400px, 50px, @primary-color, @primary-background-color, 2rem);
+        // 200px, 45px, @button-bg, @white, 1.8rem
+
+      }
+   
+  }
