--- a/less/mixinsDYL.less
+++ b/less/mixinsDYL.less
@@ -9,3 +9,34 @@
     flex-direction: @dir;
 }
 
+// button styling
+.center() {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.border-radius(@radius) {    
+    -webkit-border-radius: @radius;
+     -moz-border-radius: @radius;
+          border-radius: @radius;
+}
+
+.button-creator(@width, @height, @bg-color, @font-color, @font-size) {
+    .border-radius(15px);
+    .center;
+    width: @width;
+    height: @height;
+    background-color: @bg-color;
+    color: @font-color;
+    font-size: @font-size;
+    border: 2px solid @silver;
+    cursor: pointer;
+    @media @mobile {
+        width: 100%;
+    }
+    &:hover {
+        background: @primary-color;
+        color: black;
+    }
+}
