Tabs component getting started deleted google fonts

--- a/less/TopInfoDYL.less
+++ b/less/TopInfoDYL.less
@@ -3,7 +3,7 @@
     h1 {
         border: 1px solid black;
         // .flex(center, center, column);
-        // align-self: center;
+        text-align: center;
     }
     h5 {
         border: 1px solid black;
