tabs component and styling added to MVP

--- a/less/TopBarDYL.less
+++ b/less/TopBarDYL.less
@@ -1,7 +1,9 @@
 .top-bar {
     width: 100%;
+    // margin: 0 auto;
     .flex(center, none, row);
     .container {
+        margin: 0 auto;
         .flex(space-between, center, row);        
         @media(max-width: 500px){
             width: 100%;
