--- a/css/indexDYL.css
+++ b/css/indexDYL.css
@@ -9,6 +9,7 @@
   flex-direction: row;
 }
 .top-bar .container {
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -139,6 +140,7 @@
   text-align: center;
 }
 .carousel {
+  border: 1px solid black;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -155,6 +157,11 @@
   }
 }
 .carousel .numbertext {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
   display: none;
   padding: 15px;
   position: absolute;
@@ -162,9 +169,12 @@
   font-size: 3rem;
 }
 .carousel img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
   width: 100%;
   display: none;
-  margin: 0 auto;
 }
 .carousel .right-button {
   display: flex;
@@ -191,6 +201,128 @@
   top: 50%;
   right: 25px;
   transform: translate(0, -50%);
+}
+.tabs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  background-color: #fff;
+}
+.tabs .phases {
+  display: flex;
+  justify-content: none;
+  align-items: center;
+  flex-direction: row;
+}
+@media (max-width: 500x) {
+  .tabs .phases {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
+.tabs .tab {
+  display: flex;
+  justify-content: none;
+  align-items: center;
+  flex-direction: row;
+  color: #e37b7c;
+  background-color: #fff;
+  margin: 0 5px;
+  padding: 2px 10px;
+  font-size: 2rem;
+  letter-spacing: 2px;
+  cursor: pointer;
+  font-weight: bold;
+  border: 1px solid #e37b7c;
+}
+@media (max-width: 500x) {
+  .tabs .tab {
+    font-size: 1.5rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
+.tabs .tab:hover {
+  color: black;
+}
+.tabs .active-tab {
+  background-color: #e37b7c;
+  color: #fff;
+  border: 2px solid #C0C0C0;
+}
+@media (max-width: 500x) {
+  .tabs {
+    font-size: 1.5rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
+.cards-container {
+  display: flex;
+  justify-content: center;
+  align-items: none;
+  flex-direction: row;
+  width: 100%;
+  margin-top: 1px;
+  flex-wrap: nowrap;
+}
+@media (min-width: 1200px) {
+  .cards-container {
+    width: 1200px;
+  }
+}
+@media (max-width: 500px) {
+  .cards-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
+.cards-container .card {
+  display: flex;
+  justify-content: center;
+  align-items: none;
+  flex-direction: row;
+  border: 1px solid #e37b7c;
+  background-color: #fff;
+  color: #e37b7c;
+  width: 380px;
+  margin-bottom: 16px;
+  padding: 15px;
+  margin-top: 15px;
+}
+.cards-container .card .card-content {
+  color: #e37b7c;
+}
+.cards-container .card .card-content li {
+  font-size: 1.6rem;
+}
+@media (max-width: 500px) {
+  .cards-container .card {
+    margin-top: 25px;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
 }
 * {
   box-sizing: border-box;
@@ -224,7 +356,7 @@ h4 {
 }
 h5 {
   font-size: 2rem;
-  line-height: 2;
+  line-height: 1.5;
 }
 p {
   line-height: 1.5;
@@ -262,4 +394,14 @@ p {
 .start-button button:hover {
   background: #fff;
   color: black;
+}
+@media (max-width: 500px) {
+  .start-button {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
 }
