--- a/less/indexDYL.less
+++ b/less/indexDYL.less
@@ -5,6 +5,8 @@
 @import './carousel';
 @import './tabsDYL';
 @import './cardsDYL';
+@import './randomLearnObj';
+@import './footerDYL';
 
 * {
     box-sizing: border-box;
