--- a/less/variablesDYL.less
+++ b/less/variablesDYL.less
@@ -1,7 +1,7 @@
-@primary-background-color: #e37b7c;
-@big-letter-font: Arial, Helvetica, sans-serif;
+@primary-background-color: #1e9df7;
+@big-letter-font: 'Montserrat', sans-serif;;
 @small-letter-font: inherit;
-@primary-color: #fff;
+@primary-color: #f1f5f9;
 @silver: #C0C0C0;
 
 // Escape variable
