--- a/less/TopBarDYL.less
+++ b/less/TopBarDYL.less
@@ -51,6 +51,7 @@
     margin: 20px;    
     .flex(space-between, center, row);
     span {
+        margin: 15px;
         
         a {
             text-decoration: none;            
