--- a/less/carousel.less
+++ b/less/carousel.less
@@ -16,7 +16,8 @@
         padding: 15px;
         position: absolute;
         top: 0;
-        font-size: 3rem;
+        font-size: 4rem;
+        font-weight: bold;
         // text-align: center;        
     }
 
