--- a/less/footerDYL.less
+++ b/less/footerDYL.less
@@ -2,6 +2,7 @@ footer {
     width: 100%;
     background-color: @primary-color;
     color: @primary-background-color;
+    margin: 5px;
     @media(max-width: 500px) {
         width: 100%;
     }
@@ -22,8 +23,8 @@ footer {
     .social-media-icons {
         i {
             // color: @primary-background-color;
-            font-size: 2rem;
-            padding: 5px;
+            font-size: 3rem;
+            padding: 10px;
             &:hover {
                 opacity:0.60;
             }            
