--- a/less/indexDYL.less
+++ b/less/indexDYL.less
@@ -53,6 +53,7 @@ h1 {
   }
 
   .start-button {
+    // border: 1px solid black;
     margin-top: 40px;
     .flex(center, center, column);
       button {  
