--- a/less/TopBarDYL.less
+++ b/less/TopBarDYL.less
@@ -89,12 +89,48 @@
                 .flex(space-between, center, column);
                 flex-wrap: wrap;
                 margin: 10px;
-            } 
-
-        }
-           
+            }
+        }           
     }
 }
+
+// Hover styling for 'Features' navigation menu
+
+.container-center {
+    position: relative;
+}
+
+.features-dropdown-content {
+    display: none;
+    position: absolute;
+    margin-top: 110px;
+    margin-left: -50px;
+    background-color: @primary-color;
+    min-width: 280px;
+    box-shadow: 0px 8px 16px 0px @silver;
+    z-index: 1;
+    border-radius: 100%;    
+}
+@media(max-width: 500px){
+    width: 100%;    
+}
+.features-dropdown-content a {
+    color: @primary-background-color;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 2rem;
+    text-align: center;
+    border-radius: 100%;
+
+    &:hover {
+        background-color: @silver;
+    }
+}
+.show {
+    display: block;    
+}
+
 
 
 
