--- a/less/indexDYL.less
+++ b/less/indexDYL.less
@@ -7,6 +7,7 @@
 @import './cardsDYL';
 @import './randomLearnObj';
 @import './footerDYL';
+@import './readingDYL';
 
 * {
     box-sizing: border-box;
