--- a/css/indexDYL.css
+++ b/css/indexDYL.css
@@ -506,12 +506,15 @@ footer {
   opacity: 0.6;
 }
 .card-deck {
-  margin: 10px;
-  padding-top: 20px;
+  margin: 30px 10px;
+  padding: 50px 10px;
   border-top: 8px dotted #f1f5f9;
+  border-bottom: 8px dotted #f1f5f9;
 }
 .card-deck img {
   height: 400px;
+  border-top-right-radius: 20%;
+  border-top-left-radius: 20%;
 }
 .card-deck h5 {
   font-size: 2.8rem;
@@ -520,6 +523,37 @@ footer {
 .card-deck li {
   font-size: 1.6rem;
   font-weight: bold;
+}
+.card-deck .card {
+  border-top-right-radius: 20%;
+  border-top-left-radius: 20%;
+}
+.list-unstyled {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.list-unstyled .media {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  padding: 20px;
+}
+.list-unstyled img {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+}
+.list-unstyled h5 {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+.list-unstyled .media-body {
+  font-size: 2rem;
 }
 * {
   box-sizing: border-box;
