--- a/less/readingDYL.less
+++ b/less/readingDYL.less
@@ -1,12 +1,16 @@
 
 // Jumbotron styles
 .jumbotron {
-    // border: 1px solid black;
-    // width: 80%;
-    // .flex(center, center);    
-    border-radius: 20%;
-    padding: 20px;        
-        color: @primary-background-color;
+    // border: 1px solid black;       
+    border-radius: 50px;
+    padding: 20px;
+    color: @primary-background-color;
+    @media(max-width: 500px) {
+        width: 100%;
+    }
+    @media(max-width: 800px) {
+        width: 100%;
+    }
         p {
             font-size: 2rem;
         }   
@@ -19,6 +23,12 @@
     margin-bottom: 20px; 
     border-radius: 50%;  
     .flex(center, center);
+    @media(max-width: 500px) {
+        width: 100%;
+    }
+    @media(max-width: 800px) {
+        width: 100%;
+    }
     img {               
         height: 300px;           
         opacity: 0.6;
@@ -33,10 +43,16 @@
     padding: 50px 10px;
     border-top: 8px dotted @primary-color;
     border-bottom: 8px dotted @primary-color;
+    @media(max-width: 500px) {
+        width: 100%;
+    }
+    @media(max-width: 800px) {
+        width: 100%;
+    }
     img {
         height: 400px;
-        border-top-right-radius: 20%;
-        border-top-left-radius: 20%;
+        border-top-right-radius: 80px;
+        border-top-left-radius: 80px;
     }
     h5 {
         font-size: 2.8rem;
@@ -47,13 +63,35 @@
         font-weight: bold;
     }
     .card {
-        border-top-right-radius: 20%;
-        border-top-left-radius: 20%;
+        border-radius: 80px;
     }
+    .card-body {
+        .flex(center, center, column);       
+        a {
+            .flex(center, center, column);
+            font-weight: bold;              
+            width: 50%;
+            font-size: 1.6rem;
+            text-decoration: none;
+            color: @primary-color;
+            background-color: @primary-background-color;
+            border-radius: 20px;
+            padding: 10px;
+            &:hover {
+                color: black;
+            }            
+        }
+    }    
 }
 
 // Media list
 .list-unstyled {
+    @media(max-width: 500px) {
+        width: 100%;
+    }
+    @media(max-width: 800px) {
+        width: 100%;
+    }
     // border: 1px solid black;
     width: 80%;
     .flex(space-between, center);
@@ -76,5 +114,57 @@
     }
 }
 
+// Simple row div
+.row {
+    @media(max-width: 500px) {
+        width: 100%;
+    }
+    @media(max-width: 800px) {
+        width: 100%;
+    }
+    margin: 40px 0px;
+    border-bottom: 8px dotted @primary-color;
+    background-color: @primary-color;
+    border-radius: 50px;
+    .col-sm-12 {
+        color: @primary-background-color;
+        font-size: 4rem;
+        padding: 15px;
+        text-align: center; 
+    }
+}
+
 // Accordion
+.accordion {
+    @media(max-width: 500px) {
+        width: 100%;
+    }
+    @media(max-width: 800px) {
+        width: 100%;
+    }
+    border-bottom: 8px dotted @primary-color;
+    text-align: center;
+    margin: 20px 0px;
+    padding: 40px 0px;
+    
+    .panel-title {        
+        background-color: @primary-color;
+        border-radius: 50px;  
+        line-height: 1.5;
+        font-weight: bold;
+        font-size: 2.5rem;
+        padding: 15px;
+        // a {
+        //     padding: 20px;
+        // }
+        
+    }
+    .panel-body {          
+        li {
+            font-size: 2rem; 
+            text-align: left;
+            border-radius: 50px;            
+        }
+    }
+}
 
