Few minor finalized changes for Wednesday

--- a/less/TopBarDYL.less
+++ b/less/TopBarDYL.less
@@ -90,6 +90,11 @@
                 flex-wrap: wrap;
                 margin: 10px;
             }
+            @media(max-width: 800px){
+                width: 100%;
+                .flex(space-between, center, column);
+                flex-wrap: wrap;                
+            }
         }           
     }
 }
