--- a/less/cardsDYL.less
+++ b/less/cardsDYL.less
@@ -11,6 +11,11 @@
         .flex(center, center, column);
         flex-wrap: wrap;
     }
+    @media(max-width: 800px) {
+        width: 100%;
+        .flex(center, center, column);
+        flex-wrap: wrap;
+    }
     .card {
         .flex(center, none, row);
         border: 1px solid @primary-background-color;
