--- a/less/carousel.less
+++ b/less/carousel.less
@@ -9,6 +9,9 @@
     @media(min-width: 500px) {
         width: 100%;
     }
+    @media(min-width: 800px) {
+        width: 100%;
+    }
     .numbertext {
         .flex(center, center);
         width: 100%;
