--- a/less/indexDYL.less
+++ b/less/indexDYL.less
@@ -75,5 +75,9 @@ h1 {
         .flex(center, center, column);
         flex-wrap: wrap;
       }
-   
+      @media(max-width: 800px){
+        width: 100%;
+        .flex(center, center, column);
+        flex-wrap: wrap;
+      }   
   }
