--- a/less/randomLearnObj.less
+++ b/less/randomLearnObj.less
@@ -11,4 +11,12 @@
         margin: 20px;
         padding: 15px;
     }
+    @media(max-width: 500px) {
+        width: 100%;
+        .flex(center, center, column);
+    }
+    @media(max-width: 800px) {
+        width: 100%;
+        .flex(center, center, column);
+    }
 }
