--- a/css/indexDYL.css
+++ b/css/indexDYL.css
@@ -165,6 +165,16 @@
     margin: 10px;
   }
 }
+@media (max-width: 800px) {
+  .container-right span a {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
 .container-center {
   position: relative;
 }
@@ -213,6 +223,27 @@
   flex-direction: column;
   text-align: center;
 }
+@media (max-width: 500px) {
+  .top-info {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 10px;
+  }
+}
+@media (max-width: 800px) {
+  .top-info {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
 .carousel {
   width: 100%;
   display: flex;
@@ -225,6 +256,11 @@
   margin-top: 16px;
 }
 @media (min-width: 500px) {
+  .carousel {
+    width: 100%;
+  }
+}
+@media (min-width: 800px) {
   .carousel {
     width: 100%;
   }
@@ -344,6 +380,16 @@
     flex-wrap: wrap;
   }
 }
+@media (max-width: 800x) {
+  .tabs {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
 .cards-container {
   display: flex;
   justify-content: center;
@@ -359,6 +405,16 @@
   }
 }
 @media (max-width: 500px) {
+  .cards-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 800px) {
   .cards-container {
     width: 100%;
     display: flex;
@@ -435,6 +491,24 @@
   font-size: 2.8rem;
   margin: 20px;
   padding: 15px;
+}
+@media (max-width: 500px) {
+  .learnObjectives {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+}
+@media (max-width: 800px) {
+  .learnObjectives {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 }
 footer {
   width: 100%;
@@ -763,6 +837,16 @@ p {
   color: black;
 }
 @media (max-width: 500px) {
+  .start-button {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 800px) {
   .start-button {
     width: 100%;
     display: flex;
