--- a/less/TopInfoDYL.less
+++ b/less/TopInfoDYL.less
@@ -8,4 +8,16 @@
         .flex(center, center, column);
         text-align: center;
     }
+
+    @media(max-width: 500px){
+        width: 100%;
+        .flex(space-between, center, column);
+        flex-wrap: wrap;
+        margin: 10px;
+    }
+    @media(max-width: 800px){
+        width: 100%;
+        .flex(space-between, center, column);
+        flex-wrap: wrap;                
+    }
 }
